syntax = "proto3";

option csharp_namespace = "Protos";

message CustomerRegistrationRequest {
	string email = 1;
	string password = 2;
}

message CustomerRegistrationResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    string userId = 4;
}


message CustomerLoginRequest {
	string email = 1;
	string password = 2;
}

message CustomerLoginResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    string userId = 4;
}

service GrpcCustomer {
	rpc RegisterCustomer(CustomerRegistrationRequest) returns (CustomerRegistrationResponse);
	rpc LoginCustomer(CustomerLoginRequest) returns (CustomerLoginResponse);
}